FIXUP RM44987: address fields too closed in step2

--- a/src/layouts/birth-registration-page/birth-registration-page.scss
+++ b/src/layouts/birth-registration-page/birth-registration-page.scss
@@ -125,7 +125,8 @@
       }
     }
 
-    span.error, span.warning {
+    span.error,
+    span.warning {
       font-size: 16px;
       padding: 5px 8px 5px 40px;
       position: relative;
@@ -154,7 +155,9 @@
       border-left: 3px solid $form-warning-outline;
     }
 
-    div.input-group, div.radio-group, div.checkbox-group {
+    div.input-group,
+    div.radio-group,
+    div.checkbox-group {
       display: flex;
       flex-flow: column;
 
@@ -176,7 +179,8 @@
           flex: 1 auto;
         }
 
-        > span.error, > span.warning {
+        > span.error,
+        > span.warning {
           flex: 1 1 1;
           margin-top: 10px;
         }
@@ -187,7 +191,9 @@
       }
     }
 
-    > div.input-group, > div.radio-group, > div.checkbox-group {
+    > div.input-group,
+    > div.radio-group,
+    > div.checkbox-group {
       margin: 30px 0;
     }
 
@@ -195,12 +201,25 @@
       margin: 30px 0;
     }
 
-    div.conditional-field {
+    div.conditional-field,
+    fieldset > .input-groups {
       padding-left: 20px;
       border-left: 2px solid $form-lighter-border-color;
 
       > div.input-group {
         margin: 30px 0;
+      }
+    }
+
+    fieldset > .input-groups {
+      margin-top: 0.5em;
+
+      > .input-group:first-child {
+        margin: 0;
+      }
+
+      > .input-group:last-child {
+        margin: 0;
       }
     }
   }
